tests/0008-assignment-undefined.src.err
ERROR: undefined variable 'unknown'
 | unknown = "what";
   ^
COMPILATION FAILED
